--- a/deployment.toml
+++ b/deployment.toml
@@ -15,3 +15,6 @@ file_name = "client-truststore.jks"
 password = "wso2carbon"
 alias = "symmetric.key.value"
 algorithm = "AES"
+
+[transport.passthru_https.sender.parameters]
+HostnameVerifier = "AllowAll"
