--- a/deployment.toml
+++ b/deployment.toml
@@ -16,5 +16,5 @@ password = "wso2carbon"
 alias = "symmetric.key.value"
 algorithm = "AES"
 
-[transport.passthru_https.sender.parameters]
-HostnameVerifier = "AllowAll"
+[transport.http]
+preserve_http_headers = ["Content-Type","Date"]
